--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,8 @@
-<h1>posts</h1>
+<h1>Blog Posts</h1>
 
-<div id="posts">
 <% @posts.each do |post| %>
-  <h2>
-    <%= link_to post.title, post %>
-  </h2>
-  <div class="info">
-  </div>
-  <div class="content"><%= post.body %></div>
+	<div>
+		<h2><%= post.title %></h2>
+		<%= simple_format post.body %>
+	</div>
 <% end %>
-</div>
