--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,5 +9,9 @@
  * compiled file, but it's generally better to create a new file per style scope.
  *
  *= require_self
- *= require_tree .
  */
+
+ @import 'normalize';
+ @import 'bourbon';
+ @import 'bitters/bitters';
+ @import 'foundation.min';
