JJ: Adding Museo Sans webfont to project

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -1,17 +1,24 @@
-// Bloom Color Palette
+// COLORS
 //////////////////////////////////////////////////////////////////////
 
+// Bloom Brand Colors
 $bloom-blue:     #1F497D;
 $bloom-orange:   #E37929;
 $bloom-gray:     #7f7f7f;
 $bloom-green:    #276327;
 $bloom-drk-blue: #002060;
 
-
-// Color Palette
-//////////////////////////////////////////////////////////////////////
-
+// Web Colors
 $white:      #fff;
 $light-gray: #f6f6f6;
 $gray:       #9b9b9b;
 $dark-gray:  #4a4a4a;
+
+
+
+// FONTS
+//////////////////////////////////////////////////////////////////////
+
+// Main Heading Fonts
+$museo-sans:        'MuseoSans-500', Arial, sans-serif;
+$museo-sans-italic: 'MuseoSans-500Italic', Arial, sans-serif;
