--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -1,2 +1,10 @@
+// Application CSS Manifest File
+////////////////////////////////////////////////////////////////////////////////
+
+
+// Resets
 @import 'bloom-reset';
+
+// Base Styles
+@import 'webfonts/webfonts';
 @import 'variables';
