--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer class="footer">
 	<nav>
 		<ul>
-			<li><%= link_to "Insights" %></li>
-			<li><%= link_to "Meet The Team" %></li>
-			<li><%= link_to "Contact" %></li>
+			<li><%= link_to "Insights", insights_path %></li>
+			<li><%= link_to "Meet The Team", team_path %></li>
+			<li><%= link_to "Contact", contact_path %></li>
 		</ul>
 	</nav>
 </footer>
