--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,11 +4,9 @@
       <%= link_to "Bloom Consulting Group", root_path, id: "logo" %>
       <nav>
         <ul class="nav pull-right">
-          <li><%= link_to "Practice Areas" %></li>
-          <li><%= link_to "Careers" %></li>
-          <li><%= link_to "About" %></li>
-          <li><%= link_to "Manage Posts", admin_posts_path %></li>
-          <li><%= link_to "Sign In", login_path %></li>
+          <li><%= link_to "Practice Areas", practice_areas_path %></li>
+          <li><%= link_to "Careers", careers_path %></li>
+          <li><%= link_to "About", about_path %></li>
         </ul>
       </nav>
     </div>
