--- a/app/views/admin/mains/_form.html.erb
+++ b/app/views/admin/mains/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([:admin,@main]) do |f| %>
+<%= form_for [:admin, @main], :html => {:multipart => true} do |f| %>
   <% if @main.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@main.errors.count, "error") %> prohibited this main from being saved:</h2>
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= f.label :hero_image %><br>
-    <%= f.text_field :hero_image %>
+    <%= f.file_field :hero_image %>
   </div>
   <div class="field">
     <%= f.label :hero_title %><br>
