added practice area images

--- a/app/views/admin/mains/_form.html.erb
+++ b/app/views/admin/mains/_form.html.erb
@@ -41,7 +41,7 @@
   </div>
   <div class="field">
     <%= f.label :practice_area_1_image %><br>
-    <%= f.text_field :practice_area_1_image %>
+    <%= f.file_field :practice_area_1_image %>
   </div>
   <div class="field">
     <%= f.label :practice_area_1_title %><br>
@@ -57,7 +57,7 @@
   </div>
   <div class="field">
     <%= f.label :practice_area_2_image %><br>
-    <%= f.text_field :practice_area_2_image %>
+    <%= f.file_field :practice_area_2_image %>
   </div>
   <div class="field">
     <%= f.label :practice_area_2_title %><br>
@@ -73,7 +73,7 @@
   </div>
   <div class="field">
     <%= f.label :practice_area_3_image %><br>
-    <%= f.text_field :practice_area_3_image %>
+    <%= f.file_field :practice_area_3_image %>
   </div>
   <div class="field">
     <%= f.label :practice_area_3_title %><br>
