--- a/app/views/mains/show.html.erb
+++ b/app/views/mains/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong>Practice area 1 image:</strong>
-  <%= @main.practice_area_1_image %>
+  <%= image_tag @main.practice_area_1_image_url(:thumb).to_s %>
 </p>
 
 <p>
@@ -57,7 +57,7 @@
 
 <p>
   <strong>Practice area 2 image:</strong>
-  <%= @main.practice_area_2_image %>
+  <%= image_tag @main.practice_area_2_image_url(:thumb).to_s %>
 </p>
 
 <p>
@@ -77,7 +77,7 @@
 
 <p>
   <strong>Practice area 3 image:</strong>
-  <%= @main.practice_area_3_image %>
+  <%= image_tag @main.practice_area_3_image_url(:thumb).to_s %>
 </p>
 
 <p>
