JJ: adding color classes

--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -12,7 +12,7 @@ $bloom-drk-blue: #002060;
 $white:      #fff;
 $light-gray: #f6f6f6;
 $gray:       #9b9b9b;
-$dark-gray:  #4a4a4a;
+$drk-gray:   #4a4a4a;
 
 
 
