added homepage stratum images

--- a/app/views/admin/mains/_form.html.erb
+++ b/app/views/admin/mains/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :stratum_1_image %><br>
-    <%= f.text_field :stratum_1_image %>
+    <%= f.file_field :stratum_1_image %>
   </div>
   <div class="field">
     <%= f.label :stratum_1_title %><br>
@@ -89,7 +89,7 @@
   </div>
   <div class="field">
     <%= f.label :stratum_2_image %><br>
-    <%= f.text_field :stratum_2_image %>
+    <%= f.file_field :stratum_2_image %>
   </div>
   <div class="field">
     <%= f.label :stratum_2_title %><br>
