--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -4,7 +4,9 @@
 	<li><%= link_to 'Manage Users', admin_users_path %></li>
 	<li><%= link_to 'Manage HomePage', admin_mains_path %></li>
 <!-- 	<li><%= link_to 'Manage Posts', admin_posts_path %></li>
- -->	<li><%= link_to 'Manage Pages', admin_pages_path %></li>
+ -->	
+ 	<li><%= link_to 'Manage Practice Areas', admin_practiceareas_path %></li>
+ 	<li><%= link_to 'Manage Pages', admin_pages_path %></li>
 	<li><%= link_to 'Manage Jobs' %></li>
 	<li><%= link_to 'Manage Employees' %></li>
 </ul>
