--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -6,8 +6,8 @@
     .small-8.columns
       %ul{style: "float: right;"}
         %li.nav-item
-          = link_to "Practice Areas", practice_areas_path, class: "nav-link"
-        %li.nav-item
-          = link_to "Careers", careers_path, class: "nav-link"
-        %li.nav-item
-          = link_to "About", about_path, class: "nav-link"
+          = link_to "Practice Areas", practiceareas_path, class: "nav-link"
+        / %li.nav-item
+        /   = link_to "Careers", careers_path, class: "nav-link"
+        / %li.nav-item
+        /   = link_to "About", about_path, class: "nav-link"
