JJ: adding icon font files

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -7,6 +7,6 @@
 
 // Base Styles
 @import 'webfonts/webfonts';
-@import 'icon-fonts';
+@import 'iconfonts/iconfonts';
 @import 'variables';
 @import 'typography';
