--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -5,4 +5,7 @@
     .hero
       .row{style: "padding-top: 70px;"}
         .small-8.small-offset-2.columns
-          %h1{style: "font-size: 48px; color: #fff; text-align: center;"} Grow cost effectively -- with Bloom
+          %h1{style: "font-size: 48px; color: #fff; text-align: center;"}
+            = @main.hero_title
+          %h1{style: "text-align: center; padding-top: 40px;"}
+            %div{"data-icon" => "b"}
