un-breaking header and footer

--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -7,7 +7,7 @@
       %ul{style: "float: right;"}
         %li.nav-item
           = link_to "Practice Areas", practiceareas_path, class: "nav-link"
-        / %li.nav-item
-        /   = link_to "Careers", careers_path, class: "nav-link"
-        / %li.nav-item
-        /   = link_to "About", about_path, class: "nav-link"
+        %li.nav-item
+          = link_to "Careers", root_path, class: "nav-link"
+        %li.nav-item
+          = link_to "About", root_path, class: "nav-link"
