--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,9 @@
 <footer class="footer">
 	<nav>
 		<ul>
-
+			<li><%= link_to "Insights", root_path %></li>
+			<li><%= link_to "Meet The Team", root_path %></li>
+			<li><%= link_to "Contact", root_path %></li>
 		</ul>
 	</nav>
 </footer>
