--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -7,5 +7,5 @@
         .small-8.small-offset-2.columns
           %h1{style: "font-size: 48px; color: #fff; text-align: center;"}
             = @main.hero_title
-          %h1{style: "text-align: center; padding-top: 40px; color: #fff;"}
+          %h2{style: "text-align: center; padding-top: 40px; color: #fff; padding-bottom: 30px;"}
             %div{"data-icon" => "b"}
