JJ: update homepage

--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -25,3 +25,40 @@
 .large-hero {
 	background-size: cover;
 }
+
+.intro-arrow {
+	color: $white;
+}
+
+@keyframes bounce {
+  0%   {top:0px;}
+	50%  {top:8px;}
+	100% {top:0px;}
+}
+
+@-webkit-keyframes bounce {
+  0%   {top:0px;}
+	50%  {top:8px;}
+	100% {top:0px;}
+}
+
+@-moz-keyframes bounce {
+  0%   {top:0px;}
+	50%  {top:8px;}
+	100% {top:0px;}
+}
+
+@-o-keyframes bounce {
+  0%   {top:0px;}
+	50%  {top:8px;}
+	100% {top:0px;}
+}
+
+.intro-arrow:hover {
+	position: relative;
+	color: $bloom-orange;
+	animation: bounce 0.8s infinite;
+  -webkit-animation: bounce 0.8s infinite;
+  -moz-animation: bounce 0.8s infinite;
+  -o-animation: bounce 0.8s infinite;
+}
