--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -8,4 +8,6 @@
           %h1{style: "font-size: 48px; color: #fff; text-align: center;"}
             = @main.hero_title
           %h2{style: "text-align: center; padding-top: 40px; color: #fff; padding-bottom: 30px;"}
-            %div{"data-icon" => "b"}
+            %a.intro-arrow{"data-icon" => "b"}
+.bgc-lght-gray
+  .row
