JJ: updating practice areas on homepage

--- a/app/assets/stylesheets/components/_colors.scss
+++ b/app/assets/stylesheets/components/_colors.scss
@@ -9,3 +9,16 @@
 .bgc-lght-gray      { background-color: $light-gray; }
 .bgc-gray           { background-color: $gray; }
 .bgc-drk-gray       { background-color: $drk-gray; }
+
+
+// Font Colors
+.c-blue           { color: $bloom-blue; }
+.c-orange         { color: $bloom-orange; }
+.c-bloom-gray     { color: $bloom-gray; }
+.c-green          { color: $bloom-green; }
+.c-drk-blue       { color: $bloom-drk-blue; }
+
+.c-white          { color: $white; }
+.c-lght-gray      { color: $light-gray; }
+.c-gray           { color: $gray; }
+.c-drk-gray       { color: $drk-gray; }
