--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -1,13 +1,53 @@
 = if @main.hero_image_url.present?
-  - image = @main.hero_image_url(:thumb)
+  - image = @main.hero_image_url
   .large-hero{style: "background-image: url(#{image});"}
     = render 'layouts/header'
     .hero
       .row{style: "padding-top: 70px;"}
         .small-8.small-offset-2.columns
-          %h1{style: "font-size: 48px; color: #fff; text-align: center;"}
+          %h1{style: "font-size: 60px; color: #fff; text-align: center;"}
             = @main.hero_title
-          %h2{style: "text-align: center; padding-top: 40px; color: #fff; padding-bottom: 30px;"}
+          %h2{style: "text-align: center; padding-top: 40px; color: #fff; padding-bottom: 40px;"}
             %a.intro-arrow{"data-icon" => "b"}
-.bgc-lght-gray
+%div{style: "padding: 40px 0px;"}
   .row
+    .small-12.columns
+      %h2.c-blue{style: "text-align: center;"} Practice Areas
+  .row{style: "margin-top: 20px;", "data-equalizer" => "true"}
+    .small-12.medium-4.columns{"data-equalizer-watch" => "true"}
+      %div{style: "border: 1px solid #eee;"}
+        = if @main.practice_area_1_image_url.present?
+          - image = @main.practice_area_1_image_url(:thumb)
+          .practice-area-one{style: "background-image: url(#{image});"}
+            .blue-overlay{style: "width: 100%; height: 100%; background-color: rgba(31,73,125,0.4);"}
+        %div{style: "padding: 20px; text-align: center;"}
+          %h5.c-drk-gray= @main.practice_area_1_title
+          %p{style: "padding-top: 20px;"}= @main.practice_area_1_copy
+          %div{style: "padding-top: 10px;"}
+            = link_to @main.practice_area_1_link do
+              %h4{"data-icon" => "c"}
+    .small-12.medium-4.columns{"data-equalizer-watch" => "true"}
+      %div{style: "border: 1px solid #eee;"}
+        = if @main.practice_area_2_image_url.present?
+          - image = @main.practice_area_2_image_url(:thumb)
+          .practice-area-one{style: "background-image: url(#{image});"}
+            .blue-overlay{style: "width: 100%; height: 100%; background-color: rgba(31,73,125,0.4);"}
+        %div{style: "padding: 20px; text-align: center;"}
+          %h5.c-drk-gray= @main.practice_area_2_title
+          %p{style: "padding-top: 20px;"}= @main.practice_area_2_copy
+          %div{style: "padding-top: 10px;"}
+            = link_to @main.practice_area_2_link do
+              %h4{"data-icon" => "c"}
+    .small-12.medium-4.columns{"data-equalizer-watch" => "true"}
+      %div{style: "border: 1px solid #eee;"}
+        = if @main.practice_area_3_image_url.present?
+          - image = @main.practice_area_3_image_url(:thumb)
+          .practice-area-one{style: "background-image: url(#{image});"}
+            .blue-overlay{style: "width: 100%; height: 100%; background-color: rgba(31,73,125,0.4);"}
+        %div{style: "padding: 20px; text-align: center;"}
+          %h5.c-drk-gray= @main.practice_area_3_title
+          %p{style: "padding-top: 20px;"}= @main.practice_area_3_copy
+          %div{style: "padding-top: 10px;"}
+            = link_to @main.practice_area_3_link do
+              %h4{"data-icon" => "c"}
+
