--- a/app/assets/stylesheets/modules/modules.scss
+++ b/app/assets/stylesheets/modules/modules.scss
@@ -2,4 +2,6 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 @import 'header';
+@import 'footer';
 @import 'hero';
+@import 'practice-areas';
