--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= yield %>
+<div class="container"><%= yield %></div>
 <%= render 'layouts/footer' %>
 </body>
 </html>
