--- a/app/views/admin/mains/edit.html.erb
+++ b/app/views/admin/mains/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @main %> |
-<%= link_to 'Back', mains_path %>
+<%= link_to 'Back', admin_mains_path %>
