--- a/app/views/admin/practiceareas/edit.html.erb
+++ b/app/views/admin/practiceareas/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @practicearea %> |
-<%= link_to 'Back', practiceareas_path %>
+<%= link_to 'Back', admin_practiceareas_path %>
