--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -7,6 +7,6 @@
  -->	
  	<li><%= link_to 'Manage Practice Areas', admin_practiceareas_path %></li>
  	<li><%= link_to 'Manage Careers', admin_careers_path %></li>
-	<li><%= link_to 'Manage Jobs' %></li>
+	<li><%= link_to 'Manage Jobs', admin_jobs_url %></li>
 	<li><%= link_to 'Manage Employees' %></li>
 </ul>
