--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -27,6 +27,7 @@
         <td><%= job.education %></td>
         <td><%= job.qualifications %></td>
         <td><%= link_to 'Edit', edit_admin_job_path(job) %></td>
+        <td><%= link_to 'Destroy', admin_job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
