JJ: getting equalizer to work and adding sections

--- a/app/assets/stylesheets/components/_colors.scss
+++ b/app/assets/stylesheets/components/_colors.scss
@@ -8,7 +8,7 @@
 .bgc-white          { background-color: $white; }
 .bgc-lght-gray      { background-color: $light-gray; }
 .bgc-gray           { background-color: $gray; }
-.bgc-drk-gray       { background-color: $drk-gray; }
+.bgc-drk-gray       { background-color: $dark-gray; }
 
 
 // Font Colors
@@ -21,4 +21,4 @@
 .c-white          { color: $white; }
 .c-lght-gray      { color: $light-gray; }
 .c-gray           { color: $gray; }
-.c-drk-gray       { color: $drk-gray; }
+.c-drk-gray       { color: $dark-gray; }
