--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,5 +9,8 @@
 <body>
 <div class="container"><%= yield %></div>
 <%= render 'layouts/footer' %>
+<script>
+  $(document).foundation();
+</script>
 </body>
 </html>
