--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -6,11 +6,23 @@ html, body, p {
 }
 
 a {
-	color: $bloom-orange;
+  color: $base-link-color;
+  text-decoration: none;
+  @include transition(color 0.1s linear);
+
+  &:hover {
+    color: $hover-link-color;
+  }
+
+  &:active, &:focus {
+    color: $hover-link-color;
+    outline: none;
+  }
 }
 
 // Fonts
 
 html, body, p, h1, h2, h3, h4, h5, h6 {
 	font-family: $museo-sans;
+	color: $gray;
 }
