--- a/app/assets/stylesheets/modules/_practice-areas.scss
+++ b/app/assets/stylesheets/modules/_practice-areas.scss
@@ -4,3 +4,14 @@
 	width: 100%;
 	height: 152px;
 }
+
+div[data-equalizer-watch] {
+	position: relative;
+}
+
+.bottom-line {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
