Created teams page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
 	<nav>
 		<ul>
 			<li><%= link_to "Insights", root_path %></li>
-			<li><%= link_to "Meet The Team", root_path %></li>
+			<li><%= link_to "Meet The Team", teams_path %></li>
 			<li><%= link_to "Contact", root_path %></li>
 		</ul>
 	</nav>
