--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -9,5 +9,5 @@
  	<li><%= link_to 'Manage Careers Page', admin_careers_path %></li>
 	<li><%= link_to 'Manage Jobs', admin_jobs_url %></li>
 	<li><%= link_to 'Manage Team Page', admin_teams_path %></li>
-	<li><%= link_to 'Manage Employees' %></li>
+	<li><%= link_to 'Manage Employees', admin_employees_path %></li>
 </ul>
