--- a/app/views/admin/employees/index.html.erb
+++ b/app/views/admin/employees/index.html.erb
@@ -1,28 +1,5 @@
-<h1>Listing teams</h1>
+<h1>Listing employees</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Intro title</th>
-      <th>Intro copy</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @teams.each do |team| %>
-      <tr>
-        <td><%= team.intro_title %></td>
-        <td><%= team.intro_copy %></td>
-      
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
 <table>
   <thead>
     <tr>
@@ -49,7 +26,12 @@
         <td><%= employee.linkedin %></td>
         <td><%= employee.twitter %></td>
         <td><%= employee.facebook %></td>
+        <td><%= link_to 'Edit', edit_admin_employee_path(employee) %></td>
+        <td><%= link_to 'Destroy', admin_employee_path(employee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
+
+<br>
+<%= link_to 'New Employee', new_admin_employee_path %>
