JJ: cleaning up homepage css and adding coffeescript

--- a/app/assets/stylesheets/base/base.scss
+++ b/app/assets/stylesheets/base/base.scss
@@ -8,4 +8,6 @@
 @import 'webfonts/webfonts';
 @import 'iconfonts/iconfonts';
 @import 'variables';
+@import 'mixins';
+@import 'animations';
 @import 'typography';
