--- a/app/assets/stylesheets/base/_variables.scss
+++ b/app/assets/stylesheets/base/_variables.scss
@@ -22,11 +22,29 @@ $bloom-gray:     #7f7f7f;
 $bloom-green:    #276327;
 $bloom-drk-blue: #002060;
 
+$bloom-colors: (
+	('bloom-blue',     $bloom-blue),
+	('bloom-orange',   $bloom-orange),
+	('bloom-gray',     $bloom-gray),
+	('bloom-green',    $bloom-green),
+	('bloom-drk-blue', $bloom-drk-blue)
+);
+
 // Web Colors
 $white:          #fff;
 $light-gray:     #f6f6f6;
 $gray:           #9b9b9b;
 $dark-gray:      #4a4a4a;
+
+$web-colors: (
+	('white',      $white),
+	('light-gray', $light-gray),
+	('gray',       $gray),
+	('dark-gray',  $dark-gray)
+);
+
+// Special Colors
+$huskies:        #372557;
 
 // Body Color
 $base-body-color: white;
@@ -37,7 +55,7 @@ $base-accent-color: $bloom-orange;
 
 //  Text Link Colors
 $base-link-color: $base-accent-color;
-$hover-link-color: darken($base-accent-color, 15);
+$hover-link-color: darken($base-link-color, 5);
 
 // Border color
 $base-border-color: $light-gray;
