JJ: added meet the team carousel to the homepage

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,7 @@
  @import 'bourbon';
  @import 'foundation.min';
  @import 'bitters/bitters';
+ @import 'slick';
 
  @import 'base/base';
  @import 'components/components';
