minor view/controller refactoring

--- a/app/views/admin/careers/_form.html.erb
+++ b/app/views/admin/careers/_form.html.erb
@@ -28,8 +28,8 @@
     <%= f.text_field :intro_title %>
   </div>
   <div class="field">
-    <%= f.label :intro_title %><br>
-    <%= f.text_area :intro_title %>
+    <%= f.label :intro_copy %><br>
+    <%= f.text_area :intro_copy %>
   </div>
   <div class="field">
     <%= f.label :cta_title %><br>
