--- a/app/views/admin/careers/index.html.erb
+++ b/app/views/admin/careers/index.html.erb
@@ -7,7 +7,7 @@
       <th>Hero title</th>
       <th>Hero copy</th>
       <th>Intro title</th>
-      <th>Intro title</th>
+      <th>Intro copy</th>
       <th>Cta title</th>
       <th>Cta copy</th>
       <th></th>
@@ -23,7 +23,7 @@
         <td><%= career.hero_title %></td>
         <td><%= career.hero_copy %></td>
         <td><%= career.intro_title %></td>
-        <td><%= career.intro_title %></td>
+        <td><%= career.intro_copy %></td>
         <td><%= career.cta_title %></td>
         <td><%= career.cta_copy %></td>
         <td><%= link_to 'Edit', edit_admin_career_path(career) %></td>
