JJ: make carousel work and make icons looks correct

--- a/app/assets/stylesheets/base/iconfonts/_streamline.css
+++ b/app/assets/stylesheets/base/iconfonts/_streamline.css
@@ -68,3 +68,9 @@
 .bloom-fontawesome-webfont-2:before {
   content: "j";
 }
+.bloom-arrow-66:before {
+  content: "k";
+}
+.bloom-arrow-65:before {
+  content: "l";
+}
