--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -70,30 +70,40 @@
         %div.team-carousel.ta-center
           %div
             %img{src: "assets/team/heather-zindel.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} Heather Zindel
-            %p President
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Heather Zindel
+            %p
+              %small President
           %div
             %img{src: "assets/team/michael-barrett.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} Michael Barrett
-            %p Consultant
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Michael Barrett
+            %p
+              %small Consultant
           %div
             %img{src: "assets/team/amber-cooley.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} Amber Cooley
-            %p Business Manager
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Amber Cooley
+            %p
+              %small Business Manager
           %div
             %img{src: "assets/team/braden-unger.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} Braden Unger
-            %p Project Manager
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Braden Unger
+            %p
+              %small Project Manager
           %div
             %img{src: "assets/team/kyle-kumasaka.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} Kyle Kumasaka
-            %p Project Management Practice Director
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Kyle Kumasaka
+            %p
+              %small Project Management Practice Director
           %div
             %img{src: "assets/team/john-jensen.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} John Jensen
-            %p Chief Financial Officer
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} John Jensen
+            %p
+              %small Chief Financial Officer
           %div
             %img{src: "assets/team/joe-thomas.jpg", style: "margin: 0 auto;"}
-            %h6.c-orange{style: "padding-top: 8px;"} Joe Thomas
-            %p Business Intelligence Practice Director
+            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Joe Thomas
+            %p
+              %small Business Intelligence Practice Director
+        %row
+          .small-12.medium-4.medium-offset-4.columns
+            %a Meet the Team
 
