added tinyMCE, updated jobs table

--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -4,12 +4,8 @@
   <thead>
     <tr>
       <th>Title</th>
-      <th>Purpose</th>
-      <th>Responsibilities</th>
-      <th>Scope</th>
-      <th>Environmental Requirements</th>
-      <th>Education</th>
-      <th>Qualifications</th>
+      <th>Location</th>
+      <th>Description</th>
       <th></th>
       <th></th>
       <th></th>
@@ -20,12 +16,8 @@
     <% @jobs.each do |job| %>
       <tr>
         <td><%= job.title %></td>
-        <td><%= job.purpose %></td>
-        <td><%= job.responsibilities %></td>
-        <td><%= job.scope %></td>
-        <td><%= job.environmental %></td>
-        <td><%= job.education %></td>
-        <td><%= job.qualifications %></td>
+        <td><%= job.location %></td>
+        <td><%= raw job.responsibilities %></td>
         <td><%= link_to 'Edit', edit_admin_job_path(job) %></td>
         <td><%= link_to 'Destroy', admin_job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
