--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -1,3 +1,5 @@
+
+
 <%= form_for [:admin, @job], :html => {:multipart => true} do |f| %>
   <% if @job.errors.any? %>
     <div id="error_explanation">
@@ -16,30 +18,17 @@
     <%= f.text_field :title %>
   </div>
   <div class="field">
-    <%= f.label :purpose %><br>
-    <%= f.text_area :purpose %>
+    <%= f.label :location %><br>
+    <%= f.text_area :location %>
   </div>
   <div class="field">
     <%= f.label :responsibilities %><br>
-    <%= f.text_area :responsibilities %>
-  </div>
-  <div class="field">
-    <%= f.label :scope %><br>
-    <%= f.text_area :scope %>
-  </div>
-  <div class="field">
-    <%= f.label :environmental %><br>
-    <%= f.text_area :environmental %>
-  </div>
-  <div class="field">
-    <%= f.label :education %><br>
-    <%= f.text_area :education %>
-  </div>
-  <div class="field">
-    <%= f.label :qualifications %><br>
-    <%= f.text_area :qualifications %>
+    <%= f.text_area :responsibilities, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
+
+<%= tinymce %>
+ 
