--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -25,7 +25,7 @@
       %h2.c-blue{style: "text-align: center;"} Practice Areas
   .row{style: "margin-top: 20px;", "data-equalizer" => "true"}
     .small-12.medium-4.columns
-      %div{style: "border: 1px solid #eee;", "data-equalizer-watch" => "true"}
+      %div{style: "border: 1px solid #979797;", "data-equalizer-watch" => "true"}
         - image = @main.practice_area_1_image_url(:thumb)
         .practice-area-one{style: "background-image: url(#{image});"}
           .blue-overlay{style: "width: 100%; height: 100%; background-color: rgba(31,73,125,0.4);"}
@@ -37,7 +37,7 @@
               = link_to @main.practice_area_1_link do
                 %span{"data-icon" => "c"}
     .small-12.medium-4.columns
-      %div{style: "border: 1px solid #eee;", "data-equalizer-watch" => "true"}
+      %div{style: "border: 1px solid #979797;", "data-equalizer-watch" => "true"}
         - image = @main.practice_area_2_image_url(:thumb)
         .practice-area-one{style: "background-image: url(#{image});"}
           .blue-overlay{style: "width: 100%; height: 100%; background-color: rgba(31,73,125,0.4);"}
@@ -49,7 +49,7 @@
               = link_to @main.practice_area_2_link do
                 %span{"data-icon" => "c"}
     .small-12.medium-4.columns
-      %div{style: "border: 1px solid #eee;", "data-equalizer-watch" => "true"}
+      %div{style: "border: 1px solid #979797;", "data-equalizer-watch" => "true"}
         - image = @main.practice_area_3_image_url(:thumb)
         .practice-area-one{style: "background-image: url(#{image});"}
           .blue-overlay{style: "width: 100%; height: 100%; background-color: rgba(31,73,125,0.4);"}
@@ -63,47 +63,19 @@
 %div.bgc-lght-gray{style: "padding: 50px 0px;"}
   .row
     .small-12.columns
-      %h2.c-blue{style: "text-align: center;"} Meet the Team
-  .row{style: "margin-top: 20px;", "data-equalizer" => "true"}
+      %h2.c-blue.ta-center Meet the Team
+  .row{style: "margin-top: 20px;"}
     .small-12.columns
       %div.bgc-white.b-gray{style: "padding: 40px 80px;"}
         %div.team-carousel.ta-center
-          %div
-            %img{src: "assets/team/heather-zindel.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Heather Zindel
-            %p
-              %small President
-          %div
-            %img{src: "assets/team/michael-barrett.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Michael Barrett
-            %p
-              %small Consultant
-          %div
-            %img{src: "assets/team/amber-cooley.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Amber Cooley
-            %p
-              %small Business Manager
-          %div
-            %img{src: "assets/team/braden-unger.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Braden Unger
-            %p
-              %small Project Manager
-          %div
-            %img{src: "assets/team/kyle-kumasaka.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Kyle Kumasaka
-            %p
-              %small Project Management Practice Director
-          %div
-            %img{src: "assets/team/john-jensen.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} John Jensen
-            %p
-              %small Chief Financial Officer
-          %div
-            %img{src: "assets/team/joe-thomas.jpg", style: "margin: 0 auto;"}
-            %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"} Joe Thomas
-            %p
-              %small Business Intelligence Practice Director
-        %row
-          .small-12.medium-4.medium-offset-4.columns
-            %a Meet the Team
+          - @employees.each do |employee|
+            %div
+              %img{src: employee.employee_image(:thumb), style: "margin: 0 auto;"}
+              %p.c-orange{style: "padding-top: 12px; margin-bottom: -3px;"}= employee.name
+              %p
+                %small= employee.title
+        %div.btn-c-318{style: "margin: 0 auto;"}
+          = link_to teams_path, :class => "btn-filled" do
+            Meet Us All
+            %span{style: "float: right;", "data-icon" => "c"}
 
