--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -19,7 +19,7 @@
         = link_to @main.stratum_1_link do
           = @main.stratum_1_cta
           %span.h5-icon{ "data-icon" => "c"}
-%div{style: "padding: 50px 0px;"}
+.strata
   .row
     .small-12.columns
       %h2.c-blue{style: "text-align: center;"} Practice Areas
@@ -60,7 +60,7 @@
             %h4
               = link_to @main.practice_area_3_link do
                 %span{"data-icon" => "c"}
-%div.bgc-lght-gray{style: "padding: 50px 0px;"}
+.strata.bgc-lght-gray
   .row
     .small-12.columns
       %h2.c-blue.ta-center Meet the Team
