JJ: add hiring section to homepage

--- a/app/assets/stylesheets/components/_typography.scss
+++ b/app/assets/stylesheets/components/_typography.scss
@@ -2,5 +2,12 @@
 
 .h5-icon { 
 	position: relative;
-	top: 3px;
+	top: 4px;
+}
+
+.link-white {
+	color: $white;
+	&:hover {
+		color: $white;
+	}
 }
