--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -78,4 +78,16 @@
           = link_to teams_path, :class => "btn-filled" do
             Meet Us All
             %span{style: "float: right;", "data-icon" => "c"}
+.strata.bgc-orange
+  .row
+    .small-12.medium-3.columns
+      %div{style: "text-align: center;"}
+        = image_tag @main.stratum_2_image_url(:thumb).to_s, class: "b-bloom-gray"
+    .small-12.medium-9.columns
+      %h4.c-white= @main.stratum_2_title
+      %p.c-white{style: "padding-top: 10px;"}= @main.stratum_2_copy
+      %h5
+        = link_to @main.stratum_1_link, :class => "link-white" do
+          = @main.stratum_2_cta
+          %span.h5-icon{ "data-icon" => "c"}
 
