JJ: add ie7 inline block mixin

--- a/app/assets/stylesheets/base/_mixins.scss
+++ b/app/assets/stylesheets/base/_mixins.scss
@@ -7,3 +7,8 @@
   @-khtml-keyframes #{$name}  { @content; }
   @keyframes #{$name}         { @content; }
 }
+
+@mixin ie7-inline-block() {
+  *display: inline; /* IE7 inline-block hack */
+  *zoom: 1;
+}
