--- a/app/views/mains/show.haml
+++ b/app/views/mains/show.haml
@@ -75,9 +75,9 @@
               %p
                 %small= employee.title
         %div.btn-c-318{style: "margin: 0 auto;"}
-          = link_to teams_path, :class => "btn-filled" do
-            Meet Us All
-            %span{style: "float: right;", "data-icon" => "c"}
+          = link_to teams_path, :class => "btn-filled btn-l" do
+            %span.btn-text Meet Us All
+            %span.btn-text{style: "float: right;", "data-icon" => "c"}
 .strata.bgc-orange
   .row
     .small-12.medium-3.columns
