--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -2,12 +2,12 @@
   .row.nav-inner
     .small-4.columns
       = link_to root_path do
-        %img{src: "assets/logo/bloom-logo-small.svg"}
+        %img{src: "https://s3-us-west-2.amazonaws.com/bloom-site-images/bloom-logo-small.svg"}
     .small-8.columns
       %ul{style: "float: right;"}
         %li.nav-item
-          = link_to "Practice Areas", practiceareas_path, class: "nav-link"
+          = active_link_to "Practice Areas", practiceareas_path, class: "nav-link", :class_active => 'current'
         %li.nav-item
-          = link_to "Careers", careers_path, class: "nav-link"
+          = active_link_to "Careers", careers_path, class: "nav-link", :class_active => 'current'
         %li.nav-item
-          = link_to "About", root_path, class: "nav-link"
+          = active_link_to "About", "#", class: "nav-link", :class_active => 'current'
