--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -2,8 +2,44 @@
 .large-hero{style: "background-image: url(#{image});"}
   = render 'layouts/header'
   .hero
-    .row{style: "padding-top: 70px;"}
-      .small-8.small-offset-2.columns
+    .row
+      .small-12.medium-10.medium-offset-1.columns
         %h1{style: "font-size: 48px; color: #fff; text-align: center;"}
           = @practicearea.hero_title
-        %h2{style: "text-align: center; padding-top: 40px; color: #fff; padding-bottom: 30px;"}
+        %p{style: "text-align: center; padding-top: 15px; color: #fff; padding-bottom: 80px;"}
+          = @practicearea.hero_copy
+.strata-small.bgc-lght-gray{style: "border-bottom: 1px solid #ddd;"}
+  .row
+    .small-12.medium-9.columns
+      %h6{style: "display: inline-block; padding-left: 5px; line-height: 42px; margin-bottom: 0px;"}
+        %a Project Management
+      %h6{style: "display: inline-block; padding-left: 5px; color: #ddd; line-height: 42px; margin-bottom: 0px;"} &#124;
+      %h6{style: "display: inline-block; padding-left: 5px; line-height: 42px; margin-bottom: 0px;"}
+        %a Management Consulting
+      %h6{style: "display: inline-block; padding-left: 5px; color: #ddd; line-height: 42px; margin-bottom: 0px;"} &#124;
+      %h6{style: "display: inline-block; line-height: 42px; margin-bottom: 0px;"}
+        %a Business Intelligence
+    .small-12.medium-3.columns
+      %a.btn-empty.btn-m
+        %span.btn-text Contact Us
+        %span.btn-text{ style: "float: right;", "data-icon" => "c"}
+.strata
+  .row
+    .small-12.medium-5.columns
+      %h3.c-drk-gray= @practicearea.pa1_title
+    .small-12.medium-7.columns
+      %p= @practicearea.pa1_copy
+%hr
+.strata
+  .row
+    .small-12.medium-5.columns
+      %h3.c-drk-gray= @practicearea.pa2_title
+    .small-12.medium-7.columns
+      %p= @practicearea.pa2_copy
+%hr
+.strata
+  .row
+    .small-12.medium-5.columns
+      %h3.c-drk-gray= @practicearea.pa3_title
+    .small-12.medium-7.columns
+      %p= @practicearea.pa3_copy
