--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -2,7 +2,7 @@
   .row.nav-inner
     .small-4.columns
       = link_to root_path do
-        %img{src: "https://s3-us-west-2.amazonaws.com/bloom-site-images/bloom-logo-small.svg"}
+        %img{src: "https://s3-us-west-2.amazonaws.com/bloom-site-images/bloom-logo-small.svg", style: "max-height: 40px;"}
     .small-8.columns
       %ul{style: "float: right;"}
         %li.nav-item
